# databricks-examples

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: .gitignore  astro.config.mjs  package-lock.json  package.json
docs/src/: content.config.ts
docs/src/components/: CertCard.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/data_engineer_associate/: index.mdx
docs/src/content/docs/machine_learning_associate/: index.mdx
docs/src/content/docs/machine_learning_associate/1_databricks_machine_learning/: 1_mlops.mdx  2_ml_runtimes.mdx  3_automl.mdx  4_feature_stores.mdx  5_mlflow.mdx  index.mdx
docs/src/content/docs/machine_learning_associate/2_data_processing/: 1_data_exploration.mdx  2_feature_engineering.mdx  index.mdx
docs/src/content/docs/machine_learning_associate/3_model_development/: 1_model_selection.mdx  2_training_pipelines.mdx  3_hyperparameter_tuning.mdx  4_model_evaluation.mdx  index.mdx
docs/src/content/docs/machine_learning_associate/4_model_deployment/: 1_deployment_approaches.mdx  2_batch_inference.mdx  3_streaming_inference.mdx  4_realtime_inference.mdx  index.mdx
docs/src/styles/: custom.css
examples/machine_learning_associate/: index.mdx
examples/machine_learning_associate/1_databricks_machine_learning/: index.mdx
